fix(frontend): remove forced media query for the saveButton on mobile

--- a/frontend/static/css/dashboard.css
+++ b/frontend/static/css/dashboard.css
@@ -195,12 +195,6 @@ ul.dropdown-menu::-webkit-scrollbar-track {
 	border-radius: 0px 100px 100px 0px;
 }
 
-@media (max-width: 768px) {
-	#saveAllButton {
-		margin-bottom: 1rem;
-	}
-}
-
 .form-switch, .form-check {
 	padding: 0 !important;
 }
